Add equipment management views and user management enhancements
- Created `create`, `index`, and `show` views for equipment management.
- Implemented form validation and error handling in the equipment creation form.
- Added a user list view with pagination and action buttons for editing and deleting users.
- Developed user creation and editing forms with role-based company selection.
- Enhanced user detail view to display user information clearly.
- Added worker detail view to display comprehensive worker information.

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -16,3 +16,8 @@ select.form-control:focus {
     background-color: #27293d;
     color: #ffffff;
 }
+
+.sidebar .nav li>a, .off-canvas-sidebar .nav li>a {
+    font-size: 0.92475rem !important;
+    font-weight: 600 !important;
+}
